--- a/RootCommands Demo/res/layout/main.xml
+++ b/RootCommands Demo/res/layout/main.xml
@@ -4,6 +4,12 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You can observe what is done using adb logcat!" />
+
     <Button
         android:id="@+id/btest_button"
         android:layout_width="match_parent"
