--- a/RootCommands-Demo/res/layout/main.xml
+++ b/RootCommands-Demo/res/layout/main.xml
@@ -8,27 +8,42 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You can observe what is done using adb logcat!" />
+        android:text="You can observe what is happening using adb logcat!" />
 
     <Button
-        android:id="@+id/btest_button"
+        android:id="@+id/btest_button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="commandsTestOnClick"
         android:text="Commands Test" />
 
     <Button
-        android:id="@+id/btest_button"
+        android:id="@+id/btest_button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="toolboxTestOnClick"
         android:text="Toolbox Tests" />
 
     <Button
-        android:id="@+id/btest_button"
+        android:id="@+id/btest_button3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="binariesTestOnClick"
         android:text="Binaries Test" />
+
+    <Button
+        android:id="@+id/btest_button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="serviceTestOnClick"
+        android:text="Service Test" />
+    
+    
+    <Button
+        android:id="@+id/btest_button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="service2TestOnClick"
+        android:text="Service 2 Test" />
 
 </LinearLayout>
